# template

./: .gitignore  LICENSE  README.md  hk.pkl  mise.toml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/.karva_cache/run-1783056743060-26c18b24-96a4-4de6-a30e-f2bb7f7e721e/worker-0/: diagnostics.txt
backend/.karva_cache/run-1783056756750-94e7a479-da29-4877-9cf5-dcf4d1cd00b7/worker-0/: durations.json  stats.json
backend/.karva_cache/run-1783056767093-56b49ab6-37b4-4c7e-b91f-facab8af2929/worker-0/: durations.json
backend/src/app/: __init__.py  main.py  models.py
backend/tests/: test_health.py
docs/superpowers/plans/: 2026-07-03-template-repository.md
docs/superpowers/specs/: 2026-07-03-template-repository-design.md
frontend/: aube-lock.yaml  biome.json  index.html  package.json  tsconfig.json
frontend/src/: health.test.ts  health.ts  main.ts  style.css
tests/: test_template.py
