[project]
name = "template-backend"
version = "0.1.0"
description = "Typed Robyn API template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.12.5",
  "robyn>=0.76.0",
]

[dependency-groups]
dev = [
  "karva>=0.0.1a6",
  "ty>=0.0.1a33",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "app"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
